# WebSearchClassifier

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Example.ipynb  README.md  config.yaml  pyproject.toml
src/websearchclassifier/: __init__.py  __main__.py
src/websearchclassifier/baseline/: __init__.py  base.py  type.py  types.py
src/websearchclassifier/baseline/implementations/: __init__.py  ftext.py  herbert.py  tfidf.py
src/websearchclassifier/classifier/: __init__.py  base.py  type.py  wrapper.py
src/websearchclassifier/classifier/implementations/: __init__.py  logistic.py  mlp.py  svm.py
src/websearchclassifier/config/: __init__.py  base.py  dataset.py  type.py  types.py
src/websearchclassifier/config/baseline/: __init__.py  base.py  type.py
src/websearchclassifier/config/classifier/: __init__.py  base.py  type.py  types.py
src/websearchclassifier/config/dataset/: __init__.py  dataset.py  path.py  weights.py
src/websearchclassifier/config/evaluation/: __init__.py  base.py
src/websearchclassifier/config/implementations/: __init__.py  ftext.py  tfidf.py
src/websearchclassifier/dataset/: __init__.py  dataset.py  format.py  item.py  types.py
src/websearchclassifier/evaluation/: __init__.py  base.py  mode.py  types.py
src/websearchclassifier/model/: __init__.py  base.py  search.py  type.py
src/websearchclassifier/pipeline/: __init__.py  models.py  pipeline.py  types.py
src/websearchclassifier/utils/: __init__.py  classifier.py  device.py  logger.py  serialization.py  types.py
tests/websearchclassifier/utils/: test_types.py
(+37 files in other folders)
